assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Domine&family=Open+Sans&display=swap');

* {
    margin: 0;
    padding: 0;
    border: 0;
    text-align: center;
    /* text-decoration: none; */
}

body {
    font-family: "Open-Sans", Domine;
}

h1 {
    font-size: 7vw;
    padding: 20px 0px;
}

h2 {
    font-size: 4vw;
    padding: 20px 0px;
    text-decoration: underline;
}

h3 {
    padding: 0px 20px 20px;
    font-size: 3.2vw;
}

p {
    font-size: 2.8vw;
}


/* Main Logo */
.main-logo {
    max-width: 100vw;
    max-height: 25vh;
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-top: 12px;
}

/* Navigation Bar */
nav {
    margin: 8px;
}

#nav-bar ul {
    display: inline-block;
    list-style-type: none;
    padding: 0;
}

#nav-bar li {
    display: inline;
    float: left;
    list-style-type: none;
    border: 1px solid black;
    box-sizing: border-box;
    background-color: black;
    color: white;
    margin-left: 3px;
    margin-right: 3px;
    border-radius: 3px;
    padding: 5px 10px;
}

#nav-bar li:hover {
    color: black;
    background-color: white;
}

#nav-bar a {
    color: inherit;
    padding: calc(5px + 1vw);
    text-decoration: none;
}

/* Hero Image and Title */
/* Code adapted from w3Schools Transparent Image Text tutorial */
#hero-image {
    width: 100%;
    height: 400px;
}

#hero-container {
    height: 400px;
    width: 100%;
    position: relative;
    margin: 0 auto;
}

#hero-container #cover-text-top {
    position: absolute;
    top: 0;
    color: white;
    width: 100%;
    /* padding: 20px 0px; */
    text-align: center;
    background: rgb(0, 0, 0);
    /* Fallback color */
    background: rgba(0, 0, 0, 0.5);
    /* Black background with 0.5 opacity */
    color: #ffffff;
}

#cover-text-bottom {
    position: absolute;
    bottom: 0%;
    color: white;
    width: 100%;
    background: rgb(0, 0, 0);
    /* Fallback color */
    background: rgba(0, 0, 0, 0.5);
    /* Black background with 0.5 opacity */
    color: #f1f1f1;
}

/* Description Section "We Are Blackshaw" */
#description {
    background-color: #ffffff;
    color: #000000;
}

#description p {
    padding: 0px 10px 20px;
}

.two-buttons {
    padding: 0px 0px 20px;
}

.two-buttons a {
    border: 1px solid black;
    color: black;
    padding: 1px 5px;
    margin-left: 10px;
    text-decoration: none;
}

.two-buttons a:hover {
    color: white;
    background-color: black;
}

/* What's On Section */
.whats-on p {
    padding: 0px 20px 20px;
}

.whats-on img {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    height: 400px;
    padding: 0px 0px 20px;
}

/* About Us Section*/

/* main code structure adapted from w3Schools Image Hover Overlay - Fade in Text */
.staff-bio {
    position: relative;
    width: 80%;
    height: 300px;
    margin-left: auto;
    margin-right: auto;
    padding: 0px 0px 20px;
}

.image {
    display: block;
    width: 90%;
    height: inherit;
    margin-left: auto;
    margin-right: auto;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 300px;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    opacity: 0;
    transition: .5s ease;
    background-color: black;
}

.staff-bio:hover .overlay {
    opacity: 0.9;
}

.text {
    color: white;
    font-size: 20px;
    position: absolute;
    height: 300px;
}

.text h3 {
    padding: 20px 0px;
}

.text p {
    text-align: center;
    font-size: 0.8rem;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
}

/* Contact Section */

#contact {
}

#form-section {
    color: #cdd0d4;
    background-color: black;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    padding: 20px 20px;
    box-sizing: border-box;
    border-radius: 5px;
}

#form-section .text-input {
    display: block;
    display: inline-block;
    margin: 5px 0px 10px;
    width: 80%;
    border: 2px solid #cdd0d4;
    border-radius: 5px;
    color: #cdd0d4;
    background-color: black;
    font-family: "Open-Sans", Domine;
}

form textarea {
    color: #cdd0d4;
    background-color: black;
    display: block;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    padding: 10px 0px;
    border: 2px solid #cdd0d4;
    border-radius: 5%;
    font-family: "Open-Sans", Domine;
}

#form-section label {
    display: block;
}

.submit-button {
    color: inherit;
    background-color: inherit;
    border: 2px solid #cdd0d4;
    margin: 20px 0px 0px;
    padding: 4px;
    font-family: "Open-Sans", Domine;
    font-size: 16px;
}

/* Footer Section */

footer {
    margin: 20px;
}
footer ul {
   
}
footer a {
    list-style-type: none;
    text-decoration: none;
    color: inherit;
}

footer li {
    display: inline;
    padding: 0px 40px;
    font-size: 2rem;
}

@media screen and (min-width: 481px) {

}

